# devops-ai-copilot_test

./: README.md  agent.py  app.py  build_info.txt  ingest.py  main.py  pyproject.toml  test_tools.py  tools.py
docs/: interne_upute.md
