[project]
name = "devops-ai-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
]
